[metadata]
name = isd-algo-avancee
# attr: src.VERSION
version = 0.2
description = Salle de TP virtuelle pour le cours «M1 ISD: Algorithmique Avancée»
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = data science, travo
license = CC
url = http://nicolas.thiery.name/Enseignement/M1-ISD-AlgorithmiqueAvancee/
author = Nicolas M. Thiéry et al.
author_email = Nicolas.Thiery@universite-paris-saclay.fr
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3

[options]
install_requires =
    # 'ordo',
    nbgrader @ git+https://github.com/jupyter/nbgrader.git#egg=0.7.0-dev
    travo @ https://gitlab.info.uqam.ca/travo/travo/-/archive/master/travo-master.zip
    graph_algorithm_player @ git+https://gitlab.dsi.universite-paris-saclay.fr/nicolas.thiery/GraphAlgorithmPlayer.git#egg=0.2.0-dev
    python_version >= "3.6"

[options.data_files]
etc/jupyter =
    etc/jupyter_notebook_config.json

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
files=*.py
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
scripts_are_modules = True
